--- a/AppointmentsApp/frontend/src/components/creation/Calendar.css
+++ b/AppointmentsApp/frontend/src/components/creation/Calendar.css
@@ -1,4 +1,57 @@
 
+.calendar-container{
+	position:relative;
+	width:80%;
+}
+
+.calendar-header{
+	width:100%;
+	display: table;
+	background-color:#d0a76a;
+	color:white;
+	padding:10px;
+	
+}
+
+.calendar-header-content{
+	display:table-row;
+}
+
+
+.month-header{
+	display:table-cell;
+	width:70%;
+	font-size:150%;
+}
+
+.year-header{
+	display:table-cell;
+	width:20%;
+	font-size:150%;
+}
+
+
+.calendar-body{
+	width:100%;
+	position:relative;
+}
+
+.calendar-body-table{
+	width:100%;
+}
+
+.calendar-body-row{
+	width:100%;
+	display:table-row;
+}
+
+.calendar-body-cell {
+	background-color: #dbe4c4;
+	padding: 15px;
+	position: relative;
+	font-size: 20px;
+	height:50px;
+}
 
 .today{
 	background-color:black !important;
@@ -20,12 +73,7 @@ body {
 
 
 
-.date {
-	background: var(--color);
-	padding: 15px;
-	position: relative;
-	font-size: 20px;
-}
+
 
 .month {
 	background: var(--color);
