--- a/AppointmentsApp/frontend/src/components/Calendar.css
+++ b/AppointmentsApp/frontend/src/components/Calendar.css
@@ -53,6 +53,11 @@
 	height:50px;
 }
 
+.lastmonth{
+	background-color:#80808047 !important;
+	color:gray;	
+}
+
 .today{
 	background-color:black !important;
 	color: white !important;
