--- a/AppointmentsApp/frontend/src/client/Client.css
+++ b/AppointmentsApp/frontend/src/client/Client.css
@@ -72,6 +72,70 @@
 
 }
 
+.react-selectize-control{
+	position:relative;
+	display:inline-block;
+	width:300px;
+	height:40px;
+	background-color: white;
+    border-radius: 10px;
+}
+
+.react-selectize-placeholder{
+	position: absolute;
+   padding:10px;
+   color:gray;
+}
+
+.react-selectize-search-field-and-selected-values{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 280px;
+    height:40px;
+}
+
+.react-selectize-reset-button-container{
+	position: absolute;
+    top: 0;
+    left: 0;
+    width: 280px;
+    height:40px;
+}
+
+.react-selectize-toggle-button-container{
+	position: absolute;
+    top: 0;
+    left: 281px;
+    width: 18px;
+    height:40px;
+}
+
+.react-selectize-toggle-button{
+	width: 15px;
+    height: 20px;
+    margin-top: 15px;
+}
+
+.simple-value{
+	position: absolute;
+    top: 0;
+    left: 0;
+    width: 280px;
+    height:40px;
+    padding:10px;
+}
+
+.resizable-input{
+	width:100% !important;
+	height:40px;
+	padding:10px;
+	background-color:transparent;
+	border:none;
+}
+
+
+
 .client-input{
 	height:40px;
 	border:1px solid #a09c9c !important;
