--- a/AppointmentsApp/frontend/src/client/Client.css
+++ b/AppointmentsApp/frontend/src/client/Client.css
@@ -49,7 +49,7 @@
 }
 
 .a-left{
-	width:65%;
+	width:75%;
 	text-align:justify;
 	vertical-align:top;
 }
@@ -68,10 +68,15 @@
 	width:94%;
 	margin:5% 2%;
 	background-color:rgba(255, 255, 255, 0.70);
-	padding:3%;
-
+	padding:3% 3% 15% 3%;
+	display:table;
 }
 
+
+.react-selectize{
+	display:table-cell;
+	vertical-align:top;
+}
 .react-selectize-control{
 	position:relative;
 	display:inline-block;
@@ -135,16 +140,8 @@
 }
 
 
-
-.client-input{
-	height:40px;
-	border:1px solid #a09c9c !important;
-	border-radius:10px;
-}
-
 .client-enter{
-	margin: 10px 10px 5px 10px;
-    height: 35px;
+	margin: 0px 10px 5px 10px;
     border-radius: 5px;
     border: none;
     background-color: #54a7a3;
@@ -152,19 +149,14 @@
     font-weight: bold;
     font-size: 100%;
     padding: 10px;
+    display:table-cell;
+    vertical-align:top;
 }
 
-.client-ul{
-	text-decoration: none;
-    list-style: none;
-    padding: 0px;
+.client-enter:disabled{
+	background-color: #a7cece;
+    color: gray;
 }
 
-.client-li{
-	background-color: #d6c3c7;
-    padding: 10px;
-    margin:1px;
-    color: #986d53;
-}
 
 
