--- a/AppointmentsApp/frontend/src/client/Client.css
+++ b/AppointmentsApp/frontend/src/client/Client.css
@@ -3,6 +3,7 @@
 	width:100%;
 	height:100%;
 	position:relative;
+	background-color: #54a7a3;
 }
 
 .h1-holder{
@@ -14,7 +15,6 @@
 .about-container{
 	position:relative;
 	width:100%;
-	height:100%;
 	margin: 30px 0px 0px 0px;
 	z-index:0;
 }
@@ -67,81 +67,23 @@
 .client-filter{
 	width:94%;
 	margin:5% 2%;
-	background-color:rgba(255, 255, 255, 0.70);
-	padding:3% 3% 15% 3%;
+	background-color:rgba(255, 255, 255, 0.85);
+	padding:3% 3% 15% 10%;
 	display:table;
 }
 
 
-.react-selectize{
-	display:table-cell;
-	vertical-align:top;
-}
-.react-selectize-control{
-	position:relative;
-	display:inline-block;
-	width:300px;
-	height:40px;
-	background-color: white;
-    border-radius: 10px;
+.selection-holder{
+	margin-top: 30px;
 }
 
-.react-selectize-placeholder{
-	position: absolute;
-   padding:10px;
-   color:gray;
-}
-
-.react-selectize-search-field-and-selected-values{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 280px;
-    height:40px;
-}
-
-.react-selectize-reset-button-container{
-	position: absolute;
-    top: 0;
-    left: 0;
-    width: 280px;
-    height:40px;
-}
-
-.react-selectize-toggle-button-container{
-	position: absolute;
-    top: 0;
-    left: 281px;
-    width: 18px;
-    height:40px;
-}
-
-.react-selectize-toggle-button{
-	width: 15px;
-    height: 20px;
-    margin-top: 15px;
-}
-
-.simple-value{
-	position: absolute;
-    top: 0;
-    left: 0;
-    width: 280px;
-    height:40px;
-    padding:10px;
-}
-
-.resizable-input{
-	width:100% !important;
-	height:40px;
-	padding:10px;
-	background-color:transparent;
-	border:none;
+.react-selectize.root-node {
+    width: 250px !important;
 }
 
 
-.client-enter{
-	margin: 0px 10px 5px 10px;
+.appointments-enter{
+	margin: 20px 0px 5px 0px;
     border-radius: 5px;
     border: none;
     background-color: #54a7a3;
@@ -153,9 +95,15 @@
     vertical-align:top;
 }
 
-.client-enter:disabled{
+.appointments-enter a, .appointments-enter a:hover{
+	text-decoration:none;
+	color:unset;
+}
+
+.appointments-enter:disabled{
 	background-color: #a7cece;
     color: gray;
+    cursor:not-allowed;
 }
 
 
